# taste_of_zambia

./: .gitignore  README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/shawarma/: admin.py  apps.py  forms.py  models.py  serializers.py  views.py
backend/shawarma/migrations/: 0001_initial.py
backend/shawarma/templates/shawarma/: about.html  base.html  blog.html  contact.html  edit_order.html  home.html  order.html  shawarmas.html
frontend/: index_2.html  package-lock.json
frontend/src/: App.tsx
frontend/src/pages/: About.tsx  Contact.tsx  Edit_Order.tsx  Home.tsx  Layout.tsx  NoPage.tsx  order.tsx
frontend/src/pages/css/: Home.css  Layout.css
