[tool.poetry]
name = "taste-of-zambia"
version = "0.1.0"
description = ""
authors = ["Edmon Sebit <edmontheprogrammer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
devtool = "^0.0.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
